--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-   Nome:untitled.html
+   Nome:index.html
    Package: 
    Autore:
    Data:
@@ -9,7 +9,7 @@
    +------+---------------+-----------+
    | Data | Programmatore | Modifiche |
    +------+---------------+-----------+
-   |      |               |           |
+   |      |               | Scrittura codice          |
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
