--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div id='authentication'></div>
   </div>
   
-  <div id="sidebar"><ul id="contacts"></ul></div>
+  <div id="sidebar"></div>
   <div id="content"></div>	
 </body>
 
