--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div id="header">
     <h1>My Talk</h1>
 	<div id='authentication'></div>
+	<a href="">Tutorial</a>
   </div>
   
   <div id="sidebar"></div>
