--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   </div>
   
   <div id="sidebar"></div>
-  <div id="content"></div>	
+  <div id="content"></div>
+  <div id="chat"></div>	
 </body>
 
 </html>
